2011-12-09 Massimo Manghi <mxmanghi@apache.org>
    * src/rivetPkgInit.c,src/parserPkgInit.c: libs now are fully based on stubs and
    the tcl version parameter passed with Tcl_InitStubs is the same Tcl version their
    linked against. Probably too strict, but a cautious point as we are moving towards
    Tcl8.6 and Tcl9, which will probably require recompilation of the whole Tcl software

2011-12-08 Massimo Manghi <mxmanghi@apache.org>
    * trunk/: Final commit merging changes to scoping commands in the ::rivet namespace

2011-12-07 Massimo Manghi <mxmanghi@apache.org>
    * doc/examples, doc/convert_examples.tcl.in: Add ::rivet namespace to examples and
    examples code converter
    * doc/examples/*.rvt: removed unneeded sgml chars escaping
    * doc/xml/install.xml: removed duplicated entry of a 'configure' switch

2011-12-06 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/tablearray.tcl: new procedure 'tablearray' prints an array content
    in an HTML <table> construct. Test procedure, we maybe want to have something more
    general for printing also dictionaries.

2011-12-06 Massimo Manghi <mxmanghi@apache.org>
    * configure_ac: add new test on Tcl version using AX_VERSION_COMPARE.

2011-12-06 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/request.xml,doc/xml/install.xml: documenting new configure switches

2011-12-05 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: child init sets also the array module_conf to signal the
    compilation flags --enable-rivet-commands-export and --enable-import-namespace-commands
    for the benefit of init.tcl
    * configure.ac: new macro created to handle --enable-rivet-commands-export and 
    --enable-import-namespace-commands
    * rivet/init.tcl: module_conf signals when commands have to be exported from ::rivet
    and when they have to be implicitly imported into the global namespace for compatibility
    with previous versions of Rivet.
