@@ -6,22 +6,23 @@
 # element name is the name of a command and the value is
 # a script that loads the command.
 
-set auto_index(::rivet::html) [list source [file join $dir html.tcl]]
-set auto_index(::rivet::lassign) [list source [file join $dir lassign.tcl]]
-set auto_index(::rivet::random) [list source [file join $dir random.tcl]]
-set auto_index(::rivet::rivet_command_document) [list source [file join $dir rivet_command_document.tcl]]
+set auto_index(::rivet::lempty) [list source [file join $dir lempty.tcl]]
 set auto_index(::rivet::load_response) [list source [file join $dir load_response.tcl]]
+set auto_index(::rivet::random) [list source [file join $dir random.tcl]]
+set auto_index(::rivet::import_switch_args) [list source [file join $dir import_switch_args.tcl]]
+set auto_index(::rivet::rivet_command_document) [list source [file join $dir rivet_command_document.tcl]]
+set auto_index(::rivet::html) [list source [file join $dir html.tcl]]
+set auto_index(::rivet::load_cookies) [list source [file join $dir load_cookies.tcl]]
 set auto_index(::rivet::debug) [list source [file join $dir debug.tcl]]
+set auto_index(::rivet::lassign) [list source [file join $dir lassign.tcl]]
+set auto_index(::rivet::import_keyvalue_pairs) [list source [file join $dir import_keyvalue_pairs.tcl]]
+set auto_index(::rivet::read_file) [list source [file join $dir read_file.tcl]]
+set auto_index(::rivet::lmatch) [list source [file join $dir lmatch.tcl]]
 set auto_index(::rivet::clock_to_rfc850_gmt) [list source [file join $dir cookie.tcl]]
 set auto_index(::rivet::make_cookie_attributes) [list source [file join $dir cookie.tcl]]
 set auto_index(::rivet::cookie) [list source [file join $dir cookie.tcl]]
-set auto_index(::rivet::lempty) [list source [file join $dir lempty.tcl]]
-set auto_index(::rivet::import_switch_args) [list source [file join $dir import_switch_args.tcl]]
-set auto_index(::rivet::lmatch) [list source [file join $dir lmatch.tcl]]
-set auto_index(::rivet::read_file) [list source [file join $dir read_file.tcl]]
-set auto_index(::rivet::import_keyvalue_pairs) [list source [file join $dir import_keyvalue_pairs.tcl]]
-set auto_index(::rivet::parray) [list source [file join $dir parray.tcl]]
-set auto_index(::rivet::tablearray) [list source [file join $dir tablearray.tcl]]
 set auto_index(::rivet::wrap) [list source [file join $dir wrap.tcl]]
 set auto_index(::rivet::wrapline) [list source [file join $dir wrap.tcl]]
-set auto_index(::rivet::load_cookies) [list source [file join $dir load_cookies.tcl]]
+set auto_index(::rivet::putsnnl) [list source [file join $dir putsnnl.tcl]]
+set auto_index(::rivet::tablearray) [list source [file join $dir tablearray.tcl]]
+set auto_index(::rivet::parray) [list source [file join $dir parray.tcl]]
